0.8/_sources/api/generated/deepchecks.tabular.checks.data_integrity.DataDuplicates.rst.txt

DataDuplicates
==============



.. currentmodule:: deepchecks.tabular.checks.data_integrity

.. autoclass:: DataDuplicates
   :special-members: __init__







.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   DataDuplicates.add_condition
   
   
   DataDuplicates.add_condition_ratio_less_or_equal
   
   
   DataDuplicates.clean_conditions
   
   
   DataDuplicates.conditions_decision
   
   
   DataDuplicates.metadata
   
   
   DataDuplicates.name
   
   
   DataDuplicates.params
   
   
   DataDuplicates.remove_condition
   
   
   DataDuplicates.run
   
   
   DataDuplicates.run_logic
   
















Examples
~~~~~~~~

.. raw:: html

    <div class="sphx-glr-thumbcontainer">

.. only:: html

 .. figure:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_data_duplicates_thumb.png
     :alt: DataDuplicates

     :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_data_duplicates.py`

.. raw:: html

    </div>
    <div style="clear:both"></div>


