0.17/_sources/api/generated/deepchecks.tabular.checks.data_integrity.DataDuplicates.rst.txt

DataDuplicates
==============



.. currentmodule:: deepchecks.tabular.checks.data_integrity

.. autoclass:: DataDuplicates
   :special-members: __init__



.. rubric:: Attributes

.. autosummary::
   :toctree:

   
   DataDuplicates.n_to_show
   






.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   DataDuplicates.add_condition
   
   
   DataDuplicates.add_condition_ratio_less_or_equal
   
   
   DataDuplicates.clean_conditions
   
   
   DataDuplicates.conditions_decision
   
   
   DataDuplicates.config
   
   
   DataDuplicates.from_config
   
   
   DataDuplicates.from_json
   
   
   DataDuplicates.metadata
   
   
   DataDuplicates.name
   
   
   DataDuplicates.params
   
   
   DataDuplicates.remove_condition
   
   
   DataDuplicates.run
   
   
   DataDuplicates.run_logic
   
   
   DataDuplicates.to_json
   
















Examples
~~~~~~~~

.. raw:: html

    <div class="sphx-glr-thumbcontainer">

.. only:: html

 .. figure:: /tabular/auto_checks/data_integrity/images/thumb/sphx_glr_plot_data_duplicates_thumb.png
     :alt: DataDuplicates

     :ref:`sphx_glr_tabular_auto_checks_data_integrity_plot_data_duplicates.py`

.. raw:: html

    </div>
    <div style="clear:both"></div>


